--- a/package.json
+++ b/package.json
@@ -8,16 +8,17 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "autoprefixer": "^10.4.2",
     "next": "12.0.10",
     "node-sass": "^7.0.1",
+    "postcss": "^8.4.6",
     "react": "17.0.2",
     "react-dom": "17.0.2",
-    "styled-components": "^5.3.3"
+    "tailwindcss": "^3.0.23"
   },
   "devDependencies": {
     "@types/node": "17.0.18",
     "@types/react": "17.0.39",
-    "@types/styled-components": "^5.1.22",
     "babel-plugin-styled-components": "^2.0.2",
     "eslint": "^8.9.0",
     "eslint-config-next": "12.0.10",
