--- a/package.json
+++ b/package.json
@@ -9,12 +9,15 @@
   },
   "dependencies": {
     "autoprefixer": "^10.4.2",
+    "axios": "^0.26.0",
     "next": "12.0.10",
     "node-sass": "^7.0.1",
     "postcss": "^8.4.6",
     "react": "17.0.2",
     "react-dom": "17.0.2",
-    "tailwindcss": "^3.0.23"
+    "tailwindcss": "^3.0.23",
+    "tailwindcss-children": "^2.1.0",
+    "tailwindcss-percentage-width": "^1.0.1"
   },
   "devDependencies": {
     "@types/node": "17.0.18",
