--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "autoprefixer": "^10.4.2",
     "axios": "^0.26.0",
+    "jotai": "^1.6.0",
     "next": "12.0.10",
     "node-sass": "^7.0.1",
     "postcss": "^8.4.6",
